Initial GitHub Pages site

--- a/index.html
+++ b/index.html
@@ -5,15 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Step Towards Heaven - Experience the Paradise of Earth. Premium Kashmir Tour & Travel Packages">
-    <meta name="keywords" content="Kashmir Tours, Travel Packages, Gulmarg, Dal Lake, Pahalgam">
-    <title>Step Towards Heaven | Kashmir Tour & Travel</title>
+        content="Book premium Kashmir tour packages with Step Towards Heaven. Experience luxury houseboats, Dal Lake, Gulmarg skiing, and safe family trips. Best rates for 2026. Custom itineraries available.">
+    <meta name="keywords"
+        content="Kashmir Tour Packages, Srinagar Tourism, Gulmarg Skiing, Dal Lake Houseboat, Pahalgam Valley, Kashmir Honeymoon Packages, Family Trip to Kashmir">
+    <meta name="author" content="Step Towards Heaven">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://kamrudin1998.github.io/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kamrudin1998.github.io/">
+    <meta property="og:title" content="Kashmir Tour Packages | Step Towards Heaven - 2026 Best Deals">
+    <meta property="og:description"
+        content="Experience the Earth's Paradise with our curated Kashmir tour packages. Luxury stays, private cabs, and unforgettable memories await.">
+    <meta property="og:image" content="https://kamrudin1998.github.io/images/02.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://kamrudin1998.github.io/">
+    <meta property="twitter:title" content="Kashmir Tour Packages | Step Towards Heaven - 2026 Best Deals">
+    <meta property="twitter:description"
+        content="Experience the Earth's Paradise with our curated Kashmir tour packages. Luxury stays, private cabs, and unforgettable memories await.">
+    <meta property="twitter:image" content="https://kamrudin1998.github.io/images/02.png">
+
+    <title>Kashmir Tour Packages | Step Towards Heaven - 2026 Best Deals</title>
+
+    <!-- Preconnect -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        media="print" onload="this.media='all'">
+    <noscript>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    </noscript>
 
     <!-- Google Fonts -->
     <link
@@ -22,6 +53,29 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "TravelAgency",
+      "name": "Step Towards Heaven",
+      "image": "https://kamrudin1998.github.io/images/nlogo.png",
+      "description": "Premium tour operator in Kashmir offering customized holiday packages, houseboat stays, and adventure tours.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "SICOP BIJBIHARA, BIJBEHARA",
+        "addressLocality": "ANANTNAG",
+        "addressRegion": "JAMMU AND KASHMIR",
+        "postalCode": "192124",
+        "addressCountry": "IN"
+      },
+      "telephone": "+917006250086",
+      "priceRange": "₹15000-₹50000",
+      "openingHours": "Mo-Su 09:00-21:00",
+      "url": "https://kamrudin1998.github.io/"
+    }
+    </script>
 </head>
 
 <body>
@@ -60,7 +114,9 @@
     <!-- ============ HERO SECTION ============ -->
     <section id="home" class="hero-section">
         <div class="hero-overlay">
-            <img src="images/02.png" alt="Kashmir Paradise">
+            <!-- Eager load the LCP image -->
+            <img src="images/02.png" alt="Panoramic view of Kashmir Valley with snow-capped mountains"
+                fetchpriority="high">
         </div>
         <div class="hero-content text-center text-white">
             <h1 class="display-3 fw-bold mb-3 animate-title">Step Towards Heaven</h1>
@@ -75,13 +131,16 @@
             <h2 class="text-center mb-5 fw-bold section-title">Why Kashmir?</h2>
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
-                    <img src="images/01.png" class="img-fluid rounded shadow" alt="Kashmir Valley">
+                    <img src="images/01.png" class="img-fluid rounded shadow" alt="Serene Shikara ride in Dal Lake"
+                        loading="lazy">
                 </div>
                 <div class="col-lg-6">
                     <p class="fs-5 mb-4">
-                        Kashmir, the crown jewel of India, is a destination of unparalleled beauty. With snow-capped
-                        mountains, pristine lakes, lush valleys, and warm hospitality, Kashmir offers a perfect escape
-                        from the hustle and bustle of city life.
+                        Known as the "Crown Jewel of India," Kashmir is more than just a destination; it's a living
+                        painting of nature's finest artistry. From the golden hues of Chinar trees to the mirror-like
+                        reflections in Dal Lake, every corner whispers a story of timeless beauty. Unlike any other
+                        retreat, we offer you a gateway to snow-draped peaks, fragrant saffron fields, and a culture
+                        steeped in warmth and hospitality.
                     </p>
                     <div class="row g-4">
                         <div class="col-sm-6">
@@ -142,22 +201,28 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/04.png" class="d-block w-100 carousel-img" alt="Gulmarg">
+                        <img src="images/04.png" class="d-block w-100 carousel-img" alt="Gulmarg snow skiing slopes"
+                            loading="lazy">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/03.png" class="d-block w-100 carousel-img" alt="Dal Lake">
+                        <img src="images/03.png" class="d-block w-100 carousel-img" alt="Dal Lake sunset view"
+                            loading="lazy">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/05.png" class="d-block w-100 carousel-img" alt="Pahalgam">
+                        <img src="images/05.png" class="d-block w-100 carousel-img" alt="Pahalgam valley and river"
+                            loading="lazy">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/06.png" class="d-block w-100 carousel-img" alt="Sonmarg">
+                        <img src="images/06.png" class="d-block w-100 carousel-img" alt="Sonmarg meadow of gold"
+                            loading="lazy">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/07.png" class="d-block w-100 carousel-img" alt="Betaab Valley">
+                        <img src="images/07.png" class="d-block w-100 carousel-img" alt="Betaab Valley scenic view"
+                            loading="lazy">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/08.png" class="d-block w-100 carousel-img" alt="Mughal Gardens">
+                        <img src="images/08.png" class="d-block w-100 carousel-img" alt="Mughal Gardens floral beauty"
+                            loading="lazy">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#sightseeingCarousel"
@@ -251,8 +316,8 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="why-us-card text-center p-4">
                         <i class="fas fa-users fa-3x text-primary mb-3"></i>
-                        <h5>Local Kashmir Experts</h5>
-                        <p>Years of experience and deep knowledge of Kashmir's hidden gems</p>
+                        <h5>Local Roots, Global Standards</h5>
+                        <p>We are locals who know every hidden gem, tea stall, and sunrise spot in the valley.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -280,7 +345,7 @@
                     <div class="why-us-card text-center p-4">
                         <i class="fas fa-shield-alt fa-3x text-danger mb-3"></i>
                         <h5>Safe & Secure</h5>
-                        <p>All necessary safety measures and insurance coverage included</p>
+                        <p>Your safety is our priority. We ensure secure transfers and vetted accommodations.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -355,7 +420,7 @@
             <div class="row g-3">
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g1.jpg" alt="Kashmir Nature">
+                        <img src="images/g1.jpg" alt="Kashmir Nature" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -363,7 +428,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g6.jpg" alt="Dal Lake">
+                        <img src="images/g6.jpg" alt="Dal Lake" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -371,7 +436,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g3.jpg" alt="Snow">
+                        <img src="images/g3.jpg" alt="Snow" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -379,7 +444,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g8.jpg" alt="Mountains">
+                        <img src="images/g8.jpg" alt="Mountains" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -387,7 +452,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g6.jpg" alt="Houseboat">
+                        <img src="images/g6.jpg" alt="Houseboat" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -395,7 +460,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g4.jpg" alt="Adventure">
+                        <img src="images/g4.jpg" alt="Adventure" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -403,7 +468,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g5.jpg" alt="Valley">
+                        <img src="images/g5.jpg" alt="Valley" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -411,7 +476,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g7.jpg" alt="Sunset">
+                        <img src="images/g7.jpg" alt="Sunset" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -679,7 +744,7 @@
     <button id="scrollTopBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <!-- Custom JS -->
     <script src="script.js"></script>
