Add SEO keywords for Jodhpur to Kashmir

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Book premium Kashmir tour packages with Step Towards Heaven. Experience luxury houseboats, Dal Lake, Gulmarg skiing, and safe family trips. Best rates for 2026. Custom itineraries available.">
+        content="Book premium Kashmir tour packages with Step Towards Heaven. Special deals for Jodhpur to Kashmir trips. Luxury houseboats, Gulmarg skiing, family & honeymoon tours from Rajasthan, Delhi & Mumbai.">
     <meta name="keywords"
-        content="Kashmir Tour Packages, Srinagar Tourism, Gulmarg Skiing, Dal Lake Houseboat, Pahalgam Valley, Kashmir Honeymoon Packages, Family Trip to Kashmir">
+        content="Jodhpur to Kashmir Tour Package, Jodhpur to Srinagar Flight, Best Kashmir Tour, Kashmir Trip from Jodhpur, Kashmir Family Tour, Kashmir Travel Agent, Rajasthan to Kashmir Packages, Gulmarg Honeymoon Package, Srinagar Houseboat Booking">
     <meta name="author" content="Step Towards Heaven">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://kamrudin1998.github.io/">
@@ -120,7 +120,8 @@
         </div>
         <div class="hero-content text-center text-white">
             <h1 class="display-3 fw-bold mb-3 animate-title">Step Towards Heaven</h1>
-            <p class="lead mb-5">Experience the Paradise of Earth – Kashmir</p>
+            <p class="lead mb-5">Experience the Paradise of Earth – Kashmir. Best customized tours from Jodhpur, Delhi &
+                All Major Cities.</p>
             <a href="#packages" class="btn btn-primary btn-lg px-5 smooth-scroll">View Packages</a>
         </div>
     </section>
@@ -331,7 +332,8 @@
                     <div class="why-us-card text-center p-4">
                         <i class="fas fa-palette fa-3x text-warning mb-3"></i>
                         <h5>Custom Packages</h5>
-                        <p>Tailored tours designed according to your preferences and budget</p>
+                        <p>Tailored tours from Jodhpur, Jaipur, Delhi, or any city. We plan your trip from your
+                            doorstep.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -561,6 +563,21 @@
                                 <div class="accordion-body">
                                     Basic coverage is included in all packages. For comprehensive travel insurance, we
                                     can assist with purchasing additional policies.
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#faq6">
+                                        How to reach Kashmir from Jodhpur?
+                                    </button>
+                                </h2>
+                                <div id="faq6" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                    <div class="accordion-body">
+                                        The best way is to take a flight from Jodhpur (JDH) to Srinagar (SXR) via Delhi.
+                                        Alternatively, you can take a train from Jodhpur to Jammu Tawi and then a
+                                        cab/bus to Srinagar. We assist with all travel arrangements.
+                                    </div>
                                 </div>
                             </div>
                         </div>
