Update gallery with user provided images

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="row g-3">
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g1.jpg" alt="Kashmir Nature" loading="lazy">
+                        <img src="images/gallery_sonamarg.jpg" alt="Snowy bridge in Sonamarg" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -430,7 +430,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g6.jpg" alt="Dal Lake" loading="lazy">
+                        <img src="images/gallery_dal_lake.jpg" alt="Beautiful Dal Lake view" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -438,7 +438,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g3.jpg" alt="Snow" loading="lazy">
+                        <img src="images/gallery_snow_hut.jpg" alt="Cozy hut in snow covered forest" loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -446,7 +446,8 @@
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <div class="gallery-item">
-                        <img src="images/g8.jpg" alt="Mountains" loading="lazy">
+                        <img src="images/gallery_ghanta_ghar.jpg" alt="Historic Ghanta Ghar (Clock Tower) at Lal Chowk"
+                            loading="lazy">
                         <div class="overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
